--- a/src/index.css
+++ b/src/index.css
@@ -138,3 +138,12 @@ nav input::placeholder {
 .toast {
     z-index: 2;
 }
+
+.coffee-img {
+    width: 100%;
+    max-width: 700px;
+    height: 500px;
+    object-fit: cover;
+    object-position: bottom;
+    border-radius: 8px;
+}
